<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_material_light"
    android:orientation="vertical"
    tools:context=".Activity.ForgetPassword">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_chevron_left" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/forgetPass" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ResetPassword"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10ssp"
            android:text="@string/PleaseAddPhone" />

        <FrameLayout
            android:id="@+id/frCountry"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="17sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kuiwet"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:background="@drawable/ic_chevron_left" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/lin_shap"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="+965" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#cccc" />

            <com.shalate.red.shalate.ConstantsFonts.RegularEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/image"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@android:color/transparent"
                android:gravity="start"
                android:hint="@string/phone"
                android:inputType="phone"
                android:padding="15dp"
                android:singleLine="true"
                android:textColor="#787878"
                android:textSize="@dimen/_9ssp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_15ssp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="@dimen/_15ssp"
            android:gravity="center"
            android:text="@string/pleaseAddLocation" />

        <com.shalate.red.shalate.ConstantsFonts.BoldButton
            android:id="@+id/btnSendCode"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/image"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/green_shap"
            android:text="@string/sendCode"
            android:textColor="@color/txtcolo"
            android:textSize="@dimen/_9ssp"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>